Fixed navbar overlapping and fixed modals

--- a/css/modal.css
+++ b/css/modal.css
@@ -25,17 +25,18 @@ li img{
    box-shadow: 0 0 30px 5px rgba(0,0,0,.2);
 }
 .modal-img{
-	width: 70%;
+	width: 282px;
+	transition: all .3;
 	margin-left: auto;
 	margin-right: auto;
 	position: relative;
-	top: 100px;
+	top: 90px;
 	border-radius: 30%;
 }
 
 @media only screen and (min-width: 480px){
 	.modal-img{
-		width: 40%;
+		/*width: 40%;*/
 			margin-left: auto;
 	margin-right: auto;
 	}
@@ -59,32 +60,3 @@ li img{
 	text-align: center;
 	/*height: 80vh !important;*/
 }
-@media only screen and (min-width: 480px){
-	.modal-img{
-		width: 40%;
-			margin-left: auto;
-	margin-right: auto;
-	}
-}
-@media only screen and (max-width: 768px){
-	.modal-img{
-		width: 50%;
-	}
-}
-
-@media only screen and (max-width: 550px){
-	.modal-img{
-		width: 60%;
-	}
-}
-@media only screen and (max-width: 480px){
-	.modal-img{
-		width: 70%;
-	}
-}
-@media only screen and (max-width: 360px){
-	.modal-img{
-		width: 80%;
-	}
-}
-
